[gd_scene load_steps=23 format=3 uid="uid://bnuslehd33gns"]

[ext_resource type="Script" path="res://scripts/inventory/magic_bomb_main.gd" id="1_p2thr"]
[ext_resource type="Shader" path="res://scripts/shaders/magic_bomb_flash.gdshader" id="2_jt4yf"]
[ext_resource type="Texture2D" uid="uid://cdolxtnfa8hal" path="res://sprites/misc/shadow.png" id="2_pnl8o"]
[ext_resource type="Texture2D" uid="uid://dqs1c3kuxyyr6" path="res://sprites/items/item_spawnables/magic_bomb.png" id="3_yyp0r"]
[ext_resource type="Texture2D" uid="uid://bn1xflwdfgr05" path="res://sprites/items/item_spawnables/bomb_explosion.png" id="4_fsqqx"]
[ext_resource type="Shader" path="res://scripts/shaders/explosion.gdshader" id="4_vqvmg"]
[ext_resource type="Texture2D" uid="uid://xbifc8dmi5qv" path="res://icon.svg" id="5_niqh7"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hwq4x"]
resource_local_to_scene = true
shader = ExtResource("4_vqvmg")
shader_parameter/center = Vector2(0.5, 0.5)
shader_parameter/force = 0.079
shader_parameter/size = 0.0
shader_parameter/thickness = 0.05
shader_parameter/offset = 0.005

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hpx18"]
resource_local_to_scene = true
shader = ExtResource("2_jt4yf")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_mvm34"]
atlas = ExtResource("4_fsqqx")
region = Rect2(0, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4aeg"]
atlas = ExtResource("4_fsqqx")
region = Rect2(20, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdyfr"]
atlas = ExtResource("4_fsqqx")
region = Rect2(40, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8eu8"]
atlas = ExtResource("4_fsqqx")
region = Rect2(60, 0, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_4avjv"]
atlas = ExtResource("4_fsqqx")
region = Rect2(0, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_alyve"]
atlas = ExtResource("4_fsqqx")
region = Rect2(20, 20, 20, 20)

[sub_resource type="AtlasTexture" id="AtlasTexture_mms1t"]
atlas = ExtResource("4_fsqqx")
region = Rect2(40, 20, 20, 20)

[sub_resource type="SpriteFrames" id="SpriteFrames_418jo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvm34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4aeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdyfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8eu8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4avjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alyve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mms1t")
}],
"loop": false,
"name": &"default",
"speed": 14.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_tn61u"]
radius = 7.07107

[sub_resource type="Animation" id="Animation_x4wkf"]
resource_name = "bomb_explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/Sprite2D:material:shader_parameter/size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body/Sprite2D:material:shader_parameter/force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.079, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body/Sprite2D:material:shader_parameter/thickness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.05, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main_body/Sprite2D:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_t3yqt"]
resource_name = "bomb_grow"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body/MagicBomb:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.35, 0.5, 0.6, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 0.7), Vector2(1.5, 1.8), Vector2(1.5, 1.2), Vector2(2, 2.2), Vector2(2, 1.7), Vector2(2.8, 3.2), Vector2(3.4, 3.6)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"bomb_explosion"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("main_body/Area2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(3.5, 3.5)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("main_body/MagicBomb:material:shader_parameter/flash_modifier")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.35, 0.5, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.5, 0.0, 0.7, 0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_7jmfx"]
resource_name = "bomb_throw"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("main_body:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(50, 0), Vector2(75, 0), Vector2(90, 0), Vector2(100, 0), Vector2(105, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("main_body:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2), Vector2(1, 1), Vector2(1.8, 1.8), Vector2(1, 1), Vector2(1.5, 1.5), Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"bomb_grow_anim"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgl2i"]
_data = {
"bomb_explosion": SubResource("Animation_x4wkf"),
"bomb_grow": SubResource("Animation_t3yqt"),
"bomb_throw": SubResource("Animation_7jmfx")
}

[node name="magic_bomb_main" type="Node2D"]
texture_filter = 1
script = ExtResource("1_p2thr")

[node name="main_body" type="Node2D" parent="."]

[node name="Shadow" type="Sprite2D" parent="main_body"]
position = Vector2(0, 3)
scale = Vector2(0.3, 0.25)
texture = ExtResource("2_pnl8o")

[node name="Sprite2D" type="Sprite2D" parent="main_body"]
visible = false
material = SubResource("ShaderMaterial_hwq4x")
scale = Vector2(0.5, 0.5)
texture = ExtResource("5_niqh7")

[node name="MagicBomb" type="Sprite2D" parent="main_body"]
material = SubResource("ShaderMaterial_hpx18")
texture = ExtResource("3_yyp0r")

[node name="Explosion" type="AnimatedSprite2D" parent="main_body"]
visible = false
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_418jo")

[node name="Area2D" type="Area2D" parent="main_body"]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="main_body/Area2D"]
shape = SubResource("CircleShape2D_tn61u")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_hgl2i")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="animation_finished" from="main_body/Explosion" to="." method="_on_explosion_animation_finished"]
[connection signal="body_entered" from="main_body/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
